--- a/provisioning/roles/webapp-container/tasks/main.yml
+++ b/provisioning/roles/webapp-container/tasks/main.yml
@@ -7,7 +7,7 @@
 - name: add FastCGI worker pool
   template: src=php-fpm-pool.conf.j2 dest=/etc/php5/fpm/pool.d/{{ APPNAME }}.conf
   notify:
-    restart PHP5-FPM
+    restart PHP-FPM
 
 - name: enable Apache VirtualHost for app
   command: creates=/etc/apache2/sites-enabled/{{ APPNAME }}.conf
