--- a/provisioning/roles/symfony/tasks/main.yml
+++ b/provisioning/roles/symfony/tasks/main.yml
@@ -1,13 +1,19 @@
 ---
+- name: ensure folders are created
+  file:
+    path: "{{ APPCOMMONDIR }}"
+    state: directory
+    mode: 0777
+
 - name: setup PHP Composer
   shell: creates=composer.phar chdir={{ APPCOMMONDIR }}
     curl -sS https://getcomposer.org/installer | php
-  sudo_user: vagrant
+  become_user: vagrant
 
 - name: setup framework installer
   shell: creates=symfony.phar chdir={{ APPCOMMONDIR }}
     curl -LsS http://symfony.com/installer > symfony.phar
-  sudo_user: vagrant
+  become_user: vagrant
 
 - name: make framework installer executable
   file: path={{ APPCOMMONDIR }}/symfony.phar mode='ugo+x'
