--- a/provisioning/roles/webapp-container/tasks/main.yml
+++ b/provisioning/roles/webapp-container/tasks/main.yml
@@ -1,17 +1,16 @@
 ---
 - name: create Apache VirtualHost for app
-  template: src=apache2.vhost.j2 dest=/etc/apache2/sites-available/{{ APPNAME }}.conf
+  template: src=apache2.vhost.j2 dest=/etc/apache2/sites-available/{{ appname }}.conf
   notify:
     restart Apache
 
 - name: add FastCGI worker pool
-  template: src=php-fpm-pool.conf.j2 dest=/etc/php5/fpm/pool.d/{{ APPNAME }}.conf
+  template: src=php-fpm-pool.conf.j2 dest=/etc/php/7.0/fpm/pool.d/{{ appname }}.conf
   notify:
-    restart PHP-FPM
+    restart PHP70-FPM
 
 - name: enable Apache VirtualHost for app
-  command: creates=/etc/apache2/sites-enabled/{{ APPNAME }}.conf
-    a2ensite {{ APPNAME }}
+  command: creates=/etc/apache2/sites-enabled/{{ appname }}.conf
+    a2ensite {{ appname }}
   notify:
     restart Apache
-
