--- a/provisioning/roles/webapp/tasks/init_app_via_installer.yml
+++ b/provisioning/roles/webapp/tasks/init_app_via_installer.yml
@@ -1,7 +1,5 @@
 ---
 - name: initialize application via symfony.phar
-  sudo_user: vagrant
-  shell: creates={{ APPDIR }}/ chdir=/tmp
-    symfony new --no-interaction --quiet {{ APPNAME }}-install
-    && mv {{ APPNAME }}-install {{ APPDIR }}
-
+  become_user: vagrant
+  shell: creates={{ APPDIR }}/
+    /{{ APPCOMMONDIR }}/symfony.phar new --no-interaction {{ APPDIR }}
