--- a/provisioning/roles/webapp-container/tasks/main.yml
+++ b/provisioning/roles/webapp-container/tasks/main.yml
@@ -4,10 +4,10 @@
   notify:
     restart Apache
 
-- name: add FastCGI worker pool
-  template: src=php-fpm-pool.conf.j2 dest=/etc/php/7.0/fpm/pool.d/{{ appname }}.conf
-  notify:
-    restart PHP70-FPM
+# - name: add FastCGI worker pool
+#   template: src=php-fpm-pool.conf.j2 dest=/etc/php/7.0/fpm/pool.d/{{ appname }}.conf
+#   notify:
+#     restart PHP70-FPM
 
 - name: enable Apache VirtualHost for app
   command: creates=/etc/apache2/sites-enabled/{{ appname }}.conf
